fix header links scroll on mobile

--- a/src/app/shared/components/layout/header/header.component.scss
+++ b/src/app/shared/components/layout/header/header.component.scss
@@ -42,9 +42,13 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    height: 40px;
+    overflow: hidden;
 
     .header__menu-links {
         overflow-x: auto;
+        height: 60px;
+        padding-bottom: 20px;
     }
 
     .header__avatar  {
